[gd_scene load_steps=4 format=3 uid="uid://wx5whhqgusvp"]

[ext_resource type="Texture2D" uid="uid://hmb5s88vh78c" path="res://Recursos/Imagens/Imagens Box/box_calendario.png" id="1_2s2h8"]
[ext_resource type="Script" path="res://Scripts/Componentes/Box Calendario.gd" id="1_3phht"]
[ext_resource type="FontFile" uid="uid://b3qs137o2m78r" path="res://Recursos/Fontes/Poppins/Poppins-Bold.ttf" id="2_g2w7j"]

[node name="BoxCalendario" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_3phht")

[node name="Fundo" type="Sprite2D" parent="."]
scale = Vector2(1.88698, 1.65789)
texture = ExtResource("1_2s2h8")
centered = false

[node name="Data" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 120.0
offset_top = 16.0
offset_right = 728.0
offset_bottom = 112.0

[node name="Dia" type="LineEdit" parent="Data"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_g2w7j")
theme_override_font_sizes/font_size = 40
placeholder_text = "DD"
alignment = 1
max_length = 3
flat = true

[node name="barra 1" type="Label" parent="Data"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_g2w7j")
theme_override_font_sizes/font_size = 50
text = "/"

[node name="Mes" type="LineEdit" parent="Data"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_g2w7j")
theme_override_font_sizes/font_size = 40
placeholder_text = "MM"
alignment = 1
max_length = 3
flat = true

[node name="barra 2" type="Label" parent="Data"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_g2w7j")
theme_override_font_sizes/font_size = 50
text = "/"

[node name="Ano" type="LineEdit" parent="Data"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_g2w7j")
theme_override_font_sizes/font_size = 40
placeholder_text = "AAAA"
alignment = 1
max_length = 4
flat = true

[connection signal="text_changed" from="Data/Dia" to="." method="_on_dia_text_changed"]
[connection signal="text_changed" from="Data/Mes" to="." method="_on_mes_text_changed"]
[connection signal="focus_exited" from="Data/Ano" to="." method="_on_ano_focus_exited"]
[connection signal="text_changed" from="Data/Ano" to="." method="_on_ano_text_changed"]
